--- a/dark-theme-extension/manifest.json
+++ b/dark-theme-extension/manifest.json
@@ -3,14 +3,16 @@
   "name": "Dark Theme Browser",
   "version": "1.0",
   "description": "Applies a dark theme to all websites",
-  "permissions": ["scripting", "tabs"],
-  "action": {
-    "default_title": "Toggle Dark Theme"
-  },
-  "background": {
-    "service_worker": "background.js"
-  },
+  "permissions": [],
+  "host_permissions": ["<all_urls>"],
   "icons": {
     "48": "icon48.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "css": ["dark.css"],
+      "run_at": "document_start"
+    }
+  ]
 }
